--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,4 +6,9 @@ edition = "2021"
 publish = false
 
 [dependencies]
+futures-signals = "0.3.24"
+js-sys = "0.3"
+serde = "1.0.136"
 silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
+wasm-bindgen = { version = "=0.2.78", features = ["serde-serialize"] }
+wasm-bindgen-futures = "0.4"
