Fix tauri-cli version

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions-rs/install@v0.1
       with:
         crate: tauri-cli
-        version: 1.0.0-rc
+        version: ^1.0.0-rc
     - uses: actions-rs/install@v0.1
       with:
         crate: trunk
