Re-enable cargo-udeps in CI

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,12 +55,16 @@ jobs:
     - uses: actions-rs/install@v0.1
       with:
         crate: cargo-udeps
+    - name: install webkit2gtk (ubuntu only)
+      if: matrix.platform == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y webkit2gtk-4.0
     - run: cargo fmt --all -- --check
       working-directory: frontend
     - run: cargo fmt --all -- --check
       working-directory: src-tauri
     - run: cargo udeps --all-targets
       working-directory: frontend
-    # TODO: Disable for now as not working
-    # - run: cargo udeps --all-targets
-    #   working-directory: src-tauri
+    - run: cargo udeps --all-targets
+      working-directory: src-tauri
