CI: Install gtk3

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y webkit2gtk-4.0
+        sudo apt-get install -y webkit2gtk-4.0 libgtk-3-dev
     - run: cargo tauri build --debug
 
   nightly:
@@ -59,7 +59,7 @@ jobs:
       if: matrix.platform == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y webkit2gtk-4.0
+        sudo apt-get install -y webkit2gtk-4.0 libgtk-3-dev
     - run: cargo fmt --all -- --check
       working-directory: frontend
     - run: cargo fmt --all -- --check
