--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y webkit2gtk-4.0
-    - run: cargo tauri build --debug
+    - run: cargo tauri build --debug --bundles deb
 
   nightly:
     strategy:
